--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ h2 {
 
 img {
   float: left;
-  width: 450px;
+  width: 445px;
   border: 5px solid blue;
 }
 
@@ -26,7 +26,15 @@ p.author {
   width: 100%;
 }
 
-p.important {
+.important {
   font-family: sans-serif;
   font-weight: 500;
+  overflow: hidden;
+}
+
+.highlight {
+  color: green;
+  font-family: impact;
+  font-weight: 500;
+  width: 100%;
 }
