--- a/css/styles.css
+++ b/css/styles.css
@@ -30,11 +30,17 @@ p.author {
   font-family: sans-serif;
   font-weight: 500;
   overflow: hidden;
+  color: navy;
 }
 
 .highlight {
   color: green;
   font-family: impact;
-  font-weight: 500;
+  font-weight: bolder: 900;
   width: 100%;
 }
+
+.list {
+  overflow: hidden;
+}
+
