--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,12 @@ h2 {
 img {
   float: left;
   width: 445px;
+  padding: 10px;
   border: 5px solid blue;
+  border-width: 10px;
+  background-color: blueviolet;
+  margin: 5px;
+  box-sizing: border-box;
 }
 
 p.intro {
@@ -25,6 +30,7 @@ p.author {
   font-family: sans-serif;
   font-weight: 500;
   width: 100%;
+  font-size: large;
 }
 
 .important {
@@ -37,7 +43,7 @@ p.author {
 .highlight {
   color: green;
   font-family: impact;
-  font-weight: bolder: 900;
+  font-weight: bolder;
   width: 100%;
 }
 
