--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,14 @@ p {
   color: midnightblue;
 }
 
+.head3 {
+  border: 2px solid royalblue;
+  padding: 10px;
+  background-color: lawngreen;
+  margin: 20px;
+  box-sizing: border-box;
+}
+
 .right {
   float: right;
 }
